cabal-version:      3.0
name:               text-display
version:            0.0.2.0
category:           Text
synopsis:           A typeclass for user-facing output
description:
  The 'Display' typeclass provides a solution for user-facing output that does not have to abide by the rules of the Show typeclass.

homepage:           https://github.com/haskell-text/text-display#readme
bug-reports:        https://github.com/haskell-text/text-display/issues
author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            MIT
build-type:         Simple
tested-with:        GHC ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.1
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell-text/text-display

common common-extensions
  default-language: Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fwrite-ide-info
    -hiedir=.hie -haddock

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules: Data.Text.Display
  build-depends:
    , base         >=4.12 && <= 5
    , bytestring  ^>=0.10 || ^>=0.11
    , text        ^>=1.2

test-suite text-display-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , base
    , bytestring
    , text-display
    , hspec
    , text
    , should-not-typecheck
    , quickcheck-text
